<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_default_image_size"
        android:inputType="number"
        android:key="@string/pref_image_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_image_size" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="any"
        android:entries="@array/pref_image_resize_labels"
        android:entryValues="@array/pref_image_resize_values"
        android:key="@string/pref_image_resize_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_image_resize_type" />

    <ListPreference
        android:defaultValue="75"
        android:id="@+id/image_quality_preference"
        android:entries="@array/pref_image_quality_labels"
        android:entryValues="@array/pref_image_quality_values"
        android:key="@string/pref_image_quality"
        android:title="@string/pref_title_image_quality" />

</PreferenceScreen>
